--- a/spring-mvc-demo/.settings/org.eclipse.wst.common.component
+++ b/spring-mvc-demo/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,6 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <property name="context-root" value="spring-mvc-demo"/>
-        <property name="java-output-path" value="/spring-mvc-demo/build/classes"/>
+        <property name="java-output-path" value="/spring-mvc-demo/bin"/>
     </wb-module>
 </project-modules>
