--- a/31-thymeleafdemo-helloworld-css/src/main/resources/templates/helloworld.html
+++ b/31-thymeleafdemo-helloworld-css/src/main/resources/templates/helloworld.html
@@ -4,6 +4,10 @@
 	
 	<head>
 		<title>Thymeleaf Demo</title>
+		
+		<!-- reference CSS file -->
+		<link rel="stylesheet"
+			  th:href="@{/css/demo.css}" />
 	</head>
 
 	<body>
