--- a/31-thymeleafdemo-helloworld-css/src/main/resources/templates/helloworld.html
+++ b/31-thymeleafdemo-helloworld-css/src/main/resources/templates/helloworld.html
@@ -12,7 +12,7 @@
 
 	<body>
 		
-		<p th:text="'Time on the server is ' + ${theDate}" />
+		<p th:text="'Time on the server is ' + ${theDate}" class="funny"/>
 		
 	</body>
 </html>
