--- a/32-thymeleafdemo-employees-list/src/main/resources/templates/list-employees.html
+++ b/32-thymeleafdemo-employees-list/src/main/resources/templates/list-employees.html
@@ -1,18 +1,13 @@
 <!DOCTYPE HTML>
 
-<html xmlns:th="http://www.thymeleaf.org">
+<html  lang="en" xmlns:th="http://www.thymeleaf.org">
 	
 	<head>
-		<title>Thymeleaf Demo</title>
-		
-		<!-- reference CSS file -->
-		<link rel="stylesheet"
-			  th:href="@{/css/demo.css}" />
+		<title>Employee Directory</title>
 	</head>
 
 	<body>
 		
-		<p th:text="'Time on the server is ' + ${theDate}" class="funny"/>
 		
 	</body>
 </html>
