--- a/32-thymeleafdemo-employees-list/src/main/resources/templates/list-employees.html
+++ b/32-thymeleafdemo-employees-list/src/main/resources/templates/list-employees.html
@@ -8,6 +8,21 @@
 
 	<body>
 		
+		<h3>Employee Directory</h3>
+		<hr>
 		
+		<table border="1">
+			<thead>
+				<tr>
+					<th>First Name</th>
+					<th>Last Name</th>
+					<th>Email</th>
+				</tr>
+			</thead>
+			
+			<tbody>
+			
+			</tbody>
+		</table>
 	</body>
 </html>
