--- a/32-thymeleafdemo-employees-list/src/main/resources/templates/list-employees.html
+++ b/32-thymeleafdemo-employees-list/src/main/resources/templates/list-employees.html
@@ -21,7 +21,13 @@
 			</thead>
 			
 			<tbody>
-			
+				<tr th:each="temEmployee : ${employees}">
+					
+					<td th:text="${tempEmployee.firstName}" />
+					<td th:text="${tempEmployee.lastName}" />
+					<td th:text="${tempEmployee.email}" />
+					
+				</tr>
 			</tbody>
 		</table>
 	</body>
