--- a/32-thymeleafdemo-employees-list/src/main/resources/templates/list-employees.html
+++ b/32-thymeleafdemo-employees-list/src/main/resources/templates/list-employees.html
@@ -12,30 +12,30 @@
 </head>
 
 <body>
-
-	<h3>Employee Directory</h3>
-	<hr>
-	
-	<table border="1">
-		<thead>
-			<tr>
-				<th>First Name</th>
-				<th>Last Name</th>
-				<th>Email</th>
-			</tr>
-		</thead>
+	<div class="container">
+		<h3>Employee Directory</h3>
+		<hr>
 		
-		<tbody>
-			<tr th:each="tempEmployee : ${employees}">
+		<table class="table table-bordered table-striped">
+			<thead class="thead-dark">
+				<tr>
+					<th>First Name</th>
+					<th>Last Name</th>
+					<th>Email</th>
+				</tr>
+			</thead>
 			
-				<td th:text="${tempEmployee.firstName}" />	
-				<td th:text="${tempEmployee.lastName}" />	
-				<td th:text="${tempEmployee.email}" />	
+			<tbody>
+				<tr th:each="tempEmployee : ${employees}">
 				
-			</tr>
-		</tbody>		
-	</table>
-	
+					<td th:text="${tempEmployee.firstName}" />	
+					<td th:text="${tempEmployee.lastName}" />	
+					<td th:text="${tempEmployee.email}" />	
+					
+				</tr>
+			</tbody>		
+		</table>
+	</div>
 	
 </body>
 </html>
