--- a/33-thymeleafdemo-employees-list-css/src/main/resources/templates/list-employees.html
+++ b/33-thymeleafdemo-employees-list-css/src/main/resources/templates/list-employees.html
@@ -21,7 +21,7 @@
 		<hr>
 		
 		<table class="table table-bordered table-striped">
-			<thead class="thead-dark">
+			<thead class="table-dark">
 				<tr>
 					<th>First Name</th>
 					<th>Last Name</th>
