--- a/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
+++ b/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
@@ -12,7 +12,7 @@
 	      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
 	      crossorigin="anonymous">
 	      
-	<title>Employee Directory</title>
+	<title>Save Employee</title>
 </head>
 
 <body>
