--- a/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
+++ b/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
@@ -16,6 +16,21 @@
 </head>
 
 <body>
+	
+	<div class="container">
+	
+		<h3>Employee Directory</h3>
+		<hr>
+		
+		<p class="h4 mb-4">Save Employee</p>
+		
+		<form action="#" th:action="@{/employees/save}"
+						 th:object="@{employee}" method="POST">
+						 
+	 	
+	 	</form>
+	
+	</div>
 
 </body>
 
