--- a/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
+++ b/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
@@ -27,7 +27,14 @@
 		<form action="#" th:action="@{/employees/save}"
 						 th:object="@{employee}" method="POST">
 						 
-	 	
+	 		<input type="text" th:field="*{firstName}"
+	 			   class="form-control mb-4 col-4" placeholder="First name">
+	 			   
+			<input type="text" th:field="*{lastName}"
+	 			   class="form-control mb-4 col-4" placeholder="Last name">
+	 			   
+			<input type="text" th:field="*{email}"
+	 			   class="form-control mb-4 col-4" placeholder="email">
 	 	</form>
 	
 	</div>
