--- a/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
+++ b/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
@@ -35,6 +35,8 @@
 	 			   
 			<input type="text" th:field="*{email}"
 	 			   class="form-control mb-4 col-4" placeholder="email">
+	 			   
+ 			<button type="submit" class="btn btn-info col-2">Save</button>
 	 	</form>
 	
 	</div>
