--- a/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
+++ b/35-thymeleafdemo-employees-add/src/main/resources/templates/employees/employee-form.html
@@ -40,7 +40,7 @@
 	 	</form>
 	 	
 	 	<hr>
-	 	<a href="@{/employees/list}">Back to Employees List</a>
+	 	<a th:href="@{/employees/list}">Back to Employees List</a>
 	
 	</div>
 
